<resources>
    <string name="app_name">GB Notes</string>
    <string name="Search_Notes">Поиск заметок</string>
    <string name="note_title">Заголовок заметки</string>
    <string name="note_content">Содержимое заметки</string>
    <string name="folder_name">Название папки</string>
    <string name="note_date">Дата создания заметки</string>
    <string name="Title_editText_Note">Заголовок</string>
    <string name="textView_date">Дата создания заметки</string>
    <string name="content_you_note">Содержимое вашей заметки</string>
    <string name="button_back">Кнопка назад</string>
    <string name="button_done">Кнопка Готово</string>
    <string name="new_folder_button">Новая папка</string>
    <string name="_0">пусто</string>
    <string name="Folders">Папки</string>
    <string name="button_create_new_note">Кнопка для создания новой заметки</string>
    <string name="go_to_folders_list">Перейти к списку папок</string>
    <string name="select_Folder">Выберите папку</string>
    <string name="folder">Папка</string>
    <string name="button_create_new_folder">Создать новую папку</string>
    <string name="icon_check">icon_check</string>
</resources>